[REFACTOR] 좋아요 기능 RedisService 분리